--- a/src/style/glassy.scss
+++ b/src/style/glassy.scss
@@ -3,5 +3,5 @@
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(19.2px);
   -webkit-backdrop-filter: blur(19.2px);
-  border: 1px solid rgba(92, 92, 92, 0.3);
+  // border: 1px solid rgba(92, 92, 92, 0.3);
 }
